# ImageChoom

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
apps/gui/imagechoom/: __init__.py  executor.py  promptlab.py  run_queue.py  settings.py  workflows.py
apps/gui/imagechoom_gui/: __init__.py  app.py  cli.py  main_window.py  paths.py
apps/wallpaper/inputs/: themes.json
apps/wallpaper/scripts/: pack_fast.choom  pack_hd.choom
docs/: A1111_SETUP.md  PRODUCT_VISION.md
presets/: anime.json  cinematic.json  portrait.json
scripts/: check_layout.sh  run_all.sh
workflows/: anime_poster.choom  cinematic_wallpaper.choom  photo_real_portrait.choom  wallpaper_pack_fast.choom  wallpaper_pack_hd.choom
